basic table layout achieved as well as syncState with a firebase repo

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Yeseva+One');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
+
+
+body {
+  /* font-family: 'Yeseva One', cursive; */
+  font-family: 'Roboto', sans-serif;
+  /* background: #EEBB22; */
+}
+
+
 .App {
   text-align: center;
 }
