--- a/src/SearchBar/SearchBar.css
+++ b/src/SearchBar/SearchBar.css
@@ -1,11 +1,20 @@
 input.searchbar {
+  color         : var(--green-5);
+  border        : 3px dashed var(--green-5);
+  background    : transparent;
   width         : 300px;
   height        : 30px;
   outline       : none;
-  background    : transparent;
   font-size     : 22px;
   padding       : 5px;
   border-radius : 3px;
-  border        : 1px solid black;
   margin-bottom : 1rem;
+  caret-color   : deeppink;
+}
+
+
+input.searchbar::placeholder {
+  font-family: 'Yeseva One', cursive;
+  color: var(--green-5);
+  opacity: 0.7;
 }
