food and category rows refactored into separate components - styling on header

--- a/src/App/colors.css
+++ b/src/App/colors.css
@@ -1,4 +1,10 @@
 :root {
+  --turq-1: #B7F3F9;
+  --turq-2: #98EEF7;
+  --turq-3: #68ADB4;
+  --turq-4: #274144;
+  --turq-5: #0D1617;
+
   --green-1: #F2FEFE;
   --green-2: #94F4F4;
   --green-3: #53F1F1;
