--- a/src/App/App.css
+++ b/src/App/App.css
@@ -15,12 +15,8 @@ h1 { font-family: 'Yeseva One', cursive; }
 
 body {
   font-family: 'Roboto', sans-serif;
-  /* background: #EEBB22; */
-  /* background: navy; */
-  /* background: darkviolet; */
-  /* background: black; */
-  background: var(--green-1);
-  color: var(--green-5);
+  background: var(--turq-1);
+  color: var(--turq-5);
 }
 
 .App {
@@ -41,17 +37,14 @@ body {
   }
 }
 
-.flex-row {
-  display: flex;
-}
-.align-center {
-  align-items: center;
-}
+.flex-row       { display: flex;}
+.align-center   { align-items: center; }
+.justify-center { justify-content: center; }
 
-.margin-right { margin-right: 1rem; }
-.margin-left { margin-left: 1rem; }
-.margin-top { margin-top: 1rem; }
-.margin-bottom { margin-bottom: 1rem; }
+.margin-right   { margin-right: 1rem; }
+.margin-left    { margin-left: 1rem; }
+.margin-top     { margin-top: 1rem; }
+.margin-bottom  { margin-bottom: 1rem; }
 
 .margin-left-auto { margin-left: auto;}
 
