--- a/src/SearchBar/SearchBar.css
+++ b/src/SearchBar/SearchBar.css
@@ -1,20 +1,44 @@
+div#searchbar-container {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  width: 100%;
+  height: 80px;
+  background: var(--turq-4);
+}
+
 input.searchbar {
-  color         : var(--green-5);
-  border        : 3px dashed var(--green-5);
+  color         : var(--turq-2);
+  border        : 3px solid var(--turq-3);
   background    : transparent;
-  width         : 300px;
+  flex-grow     : 1;
+  margin-right: 1rem;
   height        : 30px;
   outline       : none;
   font-size     : 22px;
-  padding       : 5px;
+  padding       : 10px;
   border-radius : 3px;
-  margin-bottom : 1rem;
   caret-color   : deeppink;
 }
 
 
 input.searchbar::placeholder {
   font-family: 'Yeseva One', cursive;
-  color: var(--green-5);
+  color: var(--turq-1);
   opacity: 0.7;
+}
+
+i#search-icon {
+  font-size: 2rem;
+  color: var(--turq-4);
+  margin-left: 1rem;
+  margin-right: 1rem;
+  background: var(--turq-1);
+  padding: 10px;
+  border-radius: 100%;
+  border: 3px solid var(--turq-3);
+}
+
+i#search-icon.pink {
+  color: deeppink;
 }
