--- a/src/App/colors.css
+++ b/src/App/colors.css
@@ -5,27 +5,7 @@
   --turq-4: #274144;
   --turq-5: #0D1617;
 
-  --green-1: #F2FEFE;
-  --green-2: #94F4F4;
-  --green-3: #53F1F1;
-  --green-4: #17F0F0;
-  --green-5: #00EEEE;
-
-  --blue-1: #6490F3;
-  --blue-2: #F3F7FE;
-  --blue-3: #9FB9F6;
-  --blue-4: #2E6AF3;
-  --blue-5: #034BF1;
-
-  --yellow-1: #FFC758;
-  --yellow-2: #FFFBF3;
-  --yellow-3: #FFDD9A;
-  --yellow-4: #FFB219;
-  --yellow-5: #FFAA00;
-
-  --orange-1: #FFA358;
-  --orange-2: #FFF8F3;
-  --orange-3: #FFC89A;
-  --orange-4: #FF8119;
-  --orange-5: #FF7400;
+  --green-1: #006D10;
+  --orange-1: #ff7c00;
+  --red-1: rgb(247, 23, 23);
 }
