--- a/src/App/buttons.css
+++ b/src/App/buttons.css
@@ -1,18 +1,18 @@
 
 button.circle-btn {
-  font-size: 16px;
-  border-radius: 100%;
-  height: 35px;
-  width: 35px;
-  outline: none;
-  background: transparent;
-  border: none;
-  color: white;
+  color         : deeppink;
+  border        : 1px solid deeppink;
+  font-size     : 22px;
+  border-radius : 100%;
+  height        : 45px;
+  width         : 45px;
+  outline       : none;
+  background    : white;
+  margin        : 0 2px;
 }
 
 button.circle-btn:hover {
-  color: deeppink;
-  background: white;
+  background: rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
 
@@ -21,6 +21,7 @@ button.color-btn {
   border-radius: 100%;
   height: 25px;
   width: 25px;
+  margin: 0 2px;
 }
 
 button.color-btn:hover {
@@ -29,15 +30,15 @@ button.color-btn:hover {
 }
 
 button.color-btn.green {
-  background: green;
+  background: var(--green-1);
 }
 
 button.color-btn.red {
-  background: red;
+  background: var(--red-1);
 }
 
 button.color-btn.orange {
-  background: orange;
+  background: var(--orange-1);
 }
 
 button.color-btn.active {
