--- a/src/SearchBar/SearchBar.css
+++ b/src/SearchBar/SearchBar.css
@@ -12,7 +12,7 @@ input.searchbar {
   border        : 3px solid var(--turq-3);
   background    : transparent;
   flex-grow     : 1;
-  margin-right: 1rem;
+  margin-right  : 1rem;
   height        : 30px;
   outline       : none;
   font-size     : 22px;
@@ -23,7 +23,7 @@ input.searchbar {
 
 
 input.searchbar::placeholder {
-  font-family: 'Yeseva One', cursive;
+  font-family: 'Thasadith', sans-serif;
   color: var(--turq-1);
   opacity: 0.7;
 }
