--- a/src/App/App.css
+++ b/src/App/App.css
@@ -36,7 +36,9 @@ body {
 .flex-row       { display: flex;}
 .align-center   { align-items: center; }
 .justify-center { justify-content: center; }
-
+.justify-start  { justify-content: flex-start; }
+.justify-end    { justify-content: flex-end; }
+.flex-item      { flex: 1; }
 .margin-right   { margin-right: 1rem; }
 .margin-left    { margin-left: 1rem; }
 .margin-top     { margin-top: 1rem; }
