--- a/src/App/App.css
+++ b/src/App/App.css
@@ -7,7 +7,7 @@ html, body, #root, .App {
 }
 
 
-/* h1 { font-family: 'Yeseva One', cursive; } */
+h1 { font-size: 22px; margin: 0;}
 
 body {
   font-family: 'Roboto', sans-serif;
