--- a/src/App/buttons.css
+++ b/src/App/buttons.css
@@ -2,45 +2,47 @@
 button.circle-btn {
   color         : deeppink;
   border        : 1px solid deeppink;
-  font-size     : 22px;
-  border-radius : 100%;
+  font-size     : 10px;
+  border-radius : 50%;
   height        : 45px;
   width         : 45px;
   outline       : none;
   background    : white;
   margin        : 0 2px;
+  display         : table-cell;
+  vertical-align  : middle; 
+  text-align      : center;
+  text-decoration : none;
 }
 
-button.circle-btn:hover {
-  background: rgba(0, 0, 0, 0.2);
+.circle-btn i { line-height: inherit !important; }
+
+button.circle-btn:active {
+  border: 2px solid var(--turq-2);
   cursor: pointer;
 }
 
 button.color-btn {
   outline: none;
   border-radius: 100%;
-  height: 25px;
-  width: 25px;
+  height: 45px;
+  width: 45px;
   margin: 0 2px;
+  border: 2px solid white;
 }
 
-button.color-btn:hover {
-  cursor: pointer;
-  border: 1px solid blue;
+button.color-btn:active {
+  border: 2px solid var(--turq-2);
 }
 
-button.color-btn.green {
+button.color-btn.yes {
   background: var(--green-1);
 }
 
-button.color-btn.red {
+button.color-btn.no {
   background: var(--red-1);
 }
 
-button.color-btn.orange {
+button.color-btn.maybe {
   background: var(--orange-1);
-}
-
-button.color-btn.active {
-  border: 2px solid blue;
 }
