--- a/src/App/buttons.css
+++ b/src/App/buttons.css
@@ -1,13 +1,13 @@
 
 button.circle-btn {
-  color         : deeppink;
-  border        : 1px solid deeppink;
+  color         : var(--turq-5);
+  border        : 2px solid var(--turq-4);
   font-size     : 10px;
   border-radius : 50%;
   height        : 45px;
   width         : 45px;
   outline       : none;
-  background    : white;
+  background    : var(--turq-2);
   margin        : 0 2px;
   display         : table-cell;
   vertical-align  : middle; 
@@ -24,10 +24,11 @@ button.circle-btn:active {
 
 button.color-btn {
   outline: none;
-  border-radius: 100%;
-  height: 45px;
-  width: 45px;
-  margin: 0 2px;
+  border-radius: 4px;
+  height: 30px;
+  color: white;
+  width: 100%;
+  margin: 0 12px 0 5px;
   border: 2px solid white;
 }
 
