--- a/src/FoodTable/FoodTable.css
+++ b/src/FoodTable/FoodTable.css
@@ -45,7 +45,7 @@ th, td {
   overflow      : hidden;
   border-radius : 5px;
   margin-top    : 15px;
-  border        : 3px solid deeppink;
+  border        : 3px solid var(--turq-4);
 }
 
 .food-row {
@@ -65,7 +65,7 @@ th, td {
 }
 
 .category-row {
-  background : deeppink;
+  background : var(--turq-4);
   padding    : 5px;
 }
 
